--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /*
   Theme Name: Movfix - Online Movies & TV Shows Template.
   Author Name: ThemeBeyond.
